--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <h1>Upload file</h1>
 <body>
+    Hellooo {{request.cookies['username']}}
     <form action="/upload" enctype="multipart/form-data" method="post">
         <input type="file" name="doc"></input>
         <input type="submit" value="upload">
+        <a href="{{ url_for('handle_logout') }}">Logout</a>
     </form>
 </body>
